k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecocycle
  labels:
    app.kubernetes.io/name: ecocycle-tn
    app.kubernetes.io/part-of: ecocycle
