k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecocycle-user-service
  labels:
    app.kubernetes.io/name: ecocycle-tn
    app.kubernetes.io/component: user-service
    app.kubernetes.io/part-of: ecocycle
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: ecocycle-tn
      app.kubernetes.io/component: user-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ecocycle-tn
        app.kubernetes.io/component: user-service
        app.kubernetes.io/part-of: ecocycle
    spec:
      containers:
        - name: user-service
          image: ghcr.io/ayoub-gaouet/ecocycle-tn:dev
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 25
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 6
          resources:
            requests:
              cpu: 250m
              memory: 384Mi
            limits:
              cpu: 750m
              memory: 768Mi
