k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecocycle-user-service
  labels:
    app.kubernetes.io/name: ecocycle-tn
    app.kubernetes.io/component: user-service
    app.kubernetes.io/part-of: ecocycle
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: ecocycle-tn
    app.kubernetes.io/component: user-service
